--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
     <!-- Load Custom Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <!-- Load Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <style>
         /* Kyle Thomas's Style */
         body {
             font-family: "Roboto Mono", monospace;
-            background-color: #e8e8e8;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(255, 255, 255, 0.85); /* Light text for dark background */
             margin: 0;
             padding: 20px;
             line-height: 1.6;
+            position: relative;
+            overflow: hidden;
+        }
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000; /* Black background */
+            z-index: -1; /* Place behind other content */
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -23,14 +35,14 @@
             font-weight: 200;
             margin: 0;
             line-height: 1.1;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(255, 255, 255, 0.85); /* Light text for dark background */
         }
         h2 {
             font-family: "IBM Plex Mono", monospace;
             font-size: 2.7rem;
             font-weight: 350;
             margin: 20px 0 10px;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(255, 255, 255, 0.85); /* Light text for dark background */
             cursor: pointer;
         }
         h2:hover {
@@ -40,19 +52,22 @@
             font-family: "Roboto Mono", monospace;
             font-size: 1.6rem;
             font-weight: 400;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(255, 255, 255, 0.85); /* Light text for dark background */
             margin: 5px 0;
+            text-align: center;
         }
         ul {
-            padding-left: 20px;
+            list-style-position: inside;
+            padding-left: 0;
         }
         ul li {
             margin-bottom: 10px;
         }
         a {
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(255, 255, 255, 0.85); /* Light text for dark background */
             text-decoration: none;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Light border for dark background */
+            display: inline-block;
         }
         a:hover {
             opacity: 0.7;
@@ -69,7 +84,8 @@
         }
         .summary {
             text-align: center;
-            margin-top: 50px;
+            position: relative; /* Ensure content is above particles */
+            z-index: 1;
         }
         .summary h1 {
             font-size: 5rem;
@@ -79,6 +95,8 @@
         }
         .section-links {
             margin-top: 30px;
+            position: relative; /* Ensure content is above particles */
+            z-index: 1;
         }
         .section-links a {
             display: block;
@@ -88,6 +106,9 @@
     </style>
 </head>
 <body>
+    <!-- Particles.js Container -->
+    <div id="particles-js"></div>
+
     <!-- Summary Page -->
     <div class="summary">
         <h1>LONZELL GOWDY</h1>
@@ -118,6 +139,11 @@
         }
         setInterval(updateClock, 1000);
         updateClock();
+
+        // Initialize Particles.js
+        particlesJS.load('particles-js', 'particles.json', function() {
+            console.log('Particles.js loaded!');
+        });
     </script>
 </body>
 </html>
