--- a/activities.html
+++ b/activities.html
@@ -13,9 +13,14 @@
             font-family: "Roboto Mono", monospace;
             background-color: #e8e8e8;
             color: rgba(0, 0, 0, 0.85);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
             margin: 0;
             padding: 20px;
-            line-height: 1.6;
+            text-align: center;
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -38,9 +43,11 @@
             font-weight: 400;
             color: rgba(0, 0, 0, 0.85);
             margin: 5px 0;
+            text-align: center;
         }
         ul {
-            padding-left: 20px;
+            list-style-position: inside;
+            padding-left: 0;
         }
         ul li {
             margin-bottom: 10px;
@@ -49,6 +56,7 @@
             color: rgba(0, 0, 0, 0.85);
             text-decoration: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            display: inline-block;
         }
         a:hover {
             opacity: 0.7;
@@ -69,4 +77,11 @@
     </ul>
 
     <p><strong>FLAG FOOTBALL INTRAMURAL CHAMPIONS</strong> - San Marcos, TX</p>
-    <p><em>Team Captain</em> | Sep 2024 – October 2024</
+    <p><em>Team Captain</em> | Sep 2024 – October 2024</p>
+    <ul>
+        <li>Successfully led an intramural flag football team to a championship victory by fostering strong teamwork, maintaining clear communication, and motivating teammates to perform at their best throughout the season.</li>
+    </ul>
+
+    <a href="index.html" class="back-link">← Back to Main Page</a>
+</body>
+</html>
