--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,14 @@
             font-family: "Roboto Mono", monospace;
             background-color: #e8e8e8;
             color: rgba(0, 0, 0, 0.85);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
             margin: 0;
             padding: 20px;
-            line-height: 1.6;
+            text-align: center;
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -38,9 +43,11 @@
             font-weight: 400;
             color: rgba(0, 0, 0, 0.85);
             margin: 5px 0;
+            text-align: center;
         }
         ul {
-            padding-left: 20px;
+            list-style-position: inside;
+            padding-left: 0;
         }
         ul li {
             margin-bottom: 10px;
@@ -49,6 +56,7 @@
             color: rgba(0, 0, 0, 0.85);
             text-decoration: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            display: inline-block;
         }
         a:hover {
             opacity: 0.7;
