--- a/education.html
+++ b/education.html
@@ -11,8 +11,8 @@
         /* Kyle Thomas's Style */
         body {
             font-family: "Roboto Mono", monospace;
-            background-color: #e8e8e8;
-            color: rgba(0, 0, 0, 0.85);
+            background-color: #e8e8e8; /* Original background color */
+            color: rgba(0, 0, 0, 0.85); /* Dark text for light background */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -21,6 +21,8 @@
             margin: 0;
             padding: 20px;
             text-align: center;
+            position: relative;
+            overflow: hidden; /* Hide overflowing binary numbers */
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -28,20 +30,20 @@
             font-weight: 200;
             margin: 0;
             line-height: 1.1;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(0, 0, 0, 0.85); /* Dark text for light background */
         }
         h2 {
             font-family: "IBM Plex Mono", monospace;
             font-size: 2.7rem;
             font-weight: 350;
             margin: 20px 0 10px;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(0, 0, 0, 0.85); /* Dark text for light background */
         }
         p, ul {
             font-family: "Roboto Mono", monospace;
             font-size: 1.6rem;
             font-weight: 400;
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(0, 0, 0, 0.85); /* Dark text for light background */
             margin: 5px 0;
             text-align: center;
         }
@@ -53,9 +55,9 @@
             margin-bottom: 10px;
         }
         a {
-            color: rgba(0, 0, 0, 0.85);
+            color: rgba(0, 0, 0, 0.85); /* Dark text for light background */
             text-decoration: none;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* Dark border for light background */
             display: inline-block;
         }
         a:hover {
@@ -65,9 +67,49 @@
             margin-top: 20px;
             display: inline-block;
         }
+
+        /* Binary Animation */
+        .binary {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Place behind content */
+            overflow: hidden;
+        }
+        .binary span {
+            position: absolute;
+            top: -50px;
+            font-family: "IBM Plex Mono", monospace;
+            font-size: 1.2rem;
+            color: rgba(0, 0, 0, 0.3); /* Light gray binary numbers for subtle effect */
+            animation: fall 5s linear forwards; /* Animation lasts 5 seconds */
+        }
+
+        /* Binary Animation Keyframes */
+        @keyframes fall {
+            0% {
+                transform: translateY(-100%);
+                opacity: 1; /* Fully visible at the start */
+            }
+            80% {
+                opacity: 1; /* Stay fully visible until near the bottom */
+            }
+            100% {
+                transform: translateY(100vh);
+                opacity: 0; /* Fade out at the bottom */
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Binary Animation -->
+    <div class="binary">
+        <!-- Generate binary numbers dynamically with JavaScript -->
+    </div>
+
+    <!-- Education Content -->
     <h1>EDUCATION</h1>
     <p><strong>TEXAS STATE UNIVERSITY</strong> - San Marcos, TX</p>
     <p>Bachelor of Business Administration in Computer Information Systems</p>
@@ -75,5 +117,21 @@
     <p><strong>Relevant Coursework:</strong> Data Analysis, Python Programming, Information Systems Security, Network Architecture & Data Communication, HTML/CSS/JavaScript/SQL</p>
 
     <a href="index.html" class="back-link">← Back to Main Page</a>
+
+    <script>
+        // Generate binary numbers for the animation
+        const binaryContainer = document.querySelector('.binary');
+        const binaryChars = ['0', '1']; // Binary characters
+
+        // Create 100 binary numbers
+        for (let i = 0; i < 100; i++) {
+            const binary = document.createElement('span');
+            binary.textContent = binaryChars[Math.floor(Math.random() * binaryChars.length)]; // Random 0 or 1
+            binary.style.left = `${Math.random() * 100}%`; // Random horizontal position
+            binary.style.animationDuration = `${Math.random() * 3 + 2}s`; // Random fall speed (2-5 seconds)
+            binary.style.animationDelay = `${Math.random() * 2}s`; // Random start delay (0-2 seconds)
+            binaryContainer.appendChild(binary);
+        }
+    </script>
 </body>
 </html>
