--- a/work-experience.html
+++ b/work-experience.html
@@ -21,6 +21,8 @@
             margin: 0;
             padding: 20px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -57,6 +59,7 @@
             text-decoration: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
             display: inline-block;
+            transition: opacity 0.3s ease;
         }
         a:hover {
             opacity: 0.7;
@@ -65,24 +68,58 @@
             margin-top: 20px;
             display: inline-block;
         }
+
+        /* Interactive Cards */
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .card {
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 300px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+        }
+        .card h3 {
+            font-family: "IBM Plex Mono", monospace;
+            font-size: 1.8rem;
+            margin: 0 0 10px;
+        }
+        .card p {
+            font-size: 1.2rem;
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
     <h1>WORK EXPERIENCE</h1>
-    <p><strong>RECON MR</strong> - San Marcos, TX</p>
-    <p><em>Data Analyst</em> | Dec 2023 - June 2024</p>
-    <ul>
-        <li>Utilized customer relationship management (CRM) software to accurately ticket and log survey data.</li>
-        <li>Effectively managed and resolved inquiries and issues during online survey interactions.</li>
-    </ul>
-
-    <p><strong>DESOTO PUBLIC LIBRARY</strong> - DeSoto, TX</p>
-    <p><em>IT Help Desk</em> | Jun 2022 – Aug 2023</p>
-    <ul>
-        <li>Managed a network of over 35 computers, ensuring high system uptime and adherence to security protocols.</li>
-        <li>Served as the point of contact for customers, addressing technical inquiries related to printers, fax machines, and projectors.</li>
-        <li>Enforced standard IT policies, including role-based access controls, ensuring compliance with data protection regulations.</li>
-    </ul>
+    <div class="card-container">
+        <div class="card">
+            <h3>RECON MR</h3>
+            <p><em>Data Analyst</em> | Dec 2023 - June 2024</p>
+            <ul>
+                <li>Utilized CRM software to log survey data.</li>
+                <li>Resolved inquiries during online surveys.</li>
+            </ul>
+        </div>
+        <div class="card">
+            <h3>DESOTO PUBLIC LIBRARY</h3>
+            <p><em>IT Help Desk</em> | Jun 2022 – Aug 2023</p>
+            <ul>
+                <li>Managed a network of 35+ computers.</li>
+                <li>Addressed technical inquiries for printers, fax machines, and projectors.</li>
+            </ul>
+        </div>
+    </div>
 
     <a href="index.html" class="back-link">← Back to Main Page</a>
 </body>
