--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             margin: 0;
             padding: 20px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
         h1 {
             font-family: "IBM Plex Mono", monospace;
@@ -63,6 +65,7 @@
             text-decoration: none;
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
             display: inline-block;
+            transition: opacity 0.3s ease;
         }
         a:hover {
             opacity: 0.7;
@@ -114,6 +117,7 @@
         <a href="work-experience.html">WORK EXPERIENCE</a>
         <a href="projects.html">PROJECTS</a>
         <a href="activities.html">ACTIVITIES</a>
+        <a href="Lonzell Resume UPDA.pdf" target="_blank">Full Resume</a> <!-- Added Full Resume Link -->
     </div>
 
     <script>
@@ -130,9 +134,9 @@
 
         // Trigger Confetti on Page Load
         confetti({
-            particleCount: 100, // Number of confetti pieces
-            spread: 70, // Spread of confetti
-            origin: { y: 0.6 } // Start from the top
+            particleCount: 100,
+            spread: 70,
+            origin: { y: 0.6 }
         });
     </script>
 </body>
