--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a href="work-experience.html">WORK EXPERIENCE</a>
         <a href="projects.html">PROJECTS</a>
         <a href="activities.html">ACTIVITIES</a>
-        <a href="Lonzell Resume UPDA.pdf" target="_blank">Full Resume</a> <!-- Added Full Resume Link -->
+        <a href="Lonzell Resume UPDA.pdf" target="_blank">FULL RESUME</a> <!-- Added Full Resume Link -->
     </div>
 
     <script>
